Добавлены и стилизованы заголовок и описание блока

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 </head>
 
 <body>
+	<div class="container">
+		<div class="social">
+			<h1 class="social__header">
+				Блог и соцсети
+			</h1>
+			<p class="social__descr">
+				Идейные соображения высшего порядка, а также сложившаяся структура организации представляет собой
+				интересный эксперимент
+				проверки направлений прогрессивного развития.
+			</p>
+		</div>
+	</div>
 	<script src="js/script.js"></script>
 </body>
 
