--- a/index.html
+++ b/index.html
@@ -24,6 +24,24 @@
 				интересный эксперимент
 				проверки направлений прогрессивного развития.
 			</p>
+			<ul class="social__tabs">
+				<li class="blog__tab">
+					<div>Блог</div>
+				</li>
+				<li class="vk__tab">
+					<div>ВКонтакте</div>
+				</li>
+				<li class="instagram__tab catalog__tab_active">
+					<div>Instagram</div>
+				</li>
+				<li class="youtube__tab">
+					<div>YouTube</div>
+				</li>
+				<li class="facebook__tab">
+					<div>Facebook</div>
+				</li>
+			</ul>
+			<hr class="divider">
 		</div>
 	</div>
 	<script src="js/script.js"></script>
