Первый набросок карточек

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<li class="vk__tab">
 					<div>ВКонтакте</div>
 				</li>
-				<li class="instagram__tab catalog__tab_active">
+				<li class="instagram__tab social__tab_active">
 					<div>Instagram</div>
 				</li>
 				<li class="youtube__tab">
@@ -42,6 +42,56 @@
 				</li>
 			</ul>
 			<hr class="divider">
+			<div class="card__slider">
+				<div class="card">
+					<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
+					В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на самые полезные
+					статьи и материалы,
+					необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора хостинга перед
+					созданием сайта до
+					выбора стратегии продвижения после запуска.
+				</div>
+				<div class="card">
+					<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
+					В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на самые полезные
+					статьи и материалы,
+					необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора хостинга перед
+					созданием сайта до
+					выбора стратегии продвижения после запуска.
+				</div>
+				<div class="card">
+					<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
+					В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на самые полезные
+					статьи и материалы,
+					необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора хостинга перед
+					созданием сайта до
+					выбора стратегии продвижения после запуска.
+				</div>
+				<div class="card">
+					<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
+					В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на самые полезные
+					статьи и материалы,
+					необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора хостинга перед
+					созданием сайта до
+					выбора стратегии продвижения после запуска.
+				</div>
+				<div class="card">
+					<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
+					В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на самые полезные
+					статьи и материалы,
+					необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора хостинга перед
+					созданием сайта до
+					выбора стратегии продвижения после запуска.
+				</div>
+				<div class="card">
+					<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
+					В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на самые полезные
+					статьи и материалы,
+					необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора хостинга перед
+					созданием сайта до
+					выбора стратегии продвижения после запуска.
+				</div>
+			</div>
 		</div>
 	</div>
 	<script src="js/script.js"></script>
