--- a/index.html
+++ b/index.html
@@ -42,124 +42,138 @@
 				</li>
 			</ul>
 			<hr class="divider">
-			<div class="card__slider">
-				<div class="card">
-					<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
-					<div class="card__promo">
-						<p class="card__text">
-							В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на самые
-							полезные
-							статьи и материалы,
-							необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора хостинга
-							перед
-							созданием сайта до
-							выбора стратегии продвижения после запуска.
-						</p>
-						<div class="card__hashtag">
-							<a href="#" class="card__hashtag_link">#некстайп</a>
-							<a href="#" class="card__hashtag_link">#веб_студия</a>
-							<a href="#" class="card__hashtag_link">#новыйсайт</a>
-							<a href="#" class="card__hashtag_link">#запусксайта</a>
+			<div class="card__slider_wrapper">
+				<div class="card__slider">
+					<div class="card">
+						<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
+						<div class="card__promo">
+							<p class="card__text">
+								В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на
+								самые
+								полезные
+								статьи и материалы,
+								необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора
+								хостинга
+								перед
+								созданием сайта до
+								выбора стратегии продвижения после запуска.
+							</p>
+							<div class="card__hashtag">
+								<a href="#" class="card__hashtag_link">#некстайп</a>
+								<a href="#" class="card__hashtag_link">#веб_студия</a>
+								<a href="#" class="card__hashtag_link">#новыйсайт</a>
+								<a href="#" class="card__hashtag_link">#запусксайта</a>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="card">
-					<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
-					<div class="card__promo">
-						<p class="card__text">
-							В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на самые
-							полезные
-							статьи и материалы,
-							необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора хостинга
-							перед
-							созданием сайта до
-							выбора стратегии продвижения после запуска.
-						</p>
-						<div class="card__hashtag">
-							<a href="#" class="card__hashtag_link">#некстайп</a>
-							<a href="#" class="card__hashtag_link">#веб_студия</a>
-							<a href="#" class="card__hashtag_link">#новыйсайт</a>
-							<a href="#" class="card__hashtag_link">#запусксайта</a>
+					<div class="card">
+						<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
+						<div class="card__promo">
+							<p class="card__text">
+								В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на
+								самые
+								полезные
+								статьи и материалы,
+								необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора
+								хостинга
+								перед
+								созданием сайта до
+								выбора стратегии продвижения после запуска.
+							</p>
+							<div class="card__hashtag">
+								<a href="#" class="card__hashtag_link">#некстайп</a>
+								<a href="#" class="card__hashtag_link">#веб_студия</a>
+								<a href="#" class="card__hashtag_link">#новыйсайт</a>
+								<a href="#" class="card__hashtag_link">#запусксайта</a>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="card">
-					<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
-					<div class="card__promo">
-						<p class="card__text">
-							В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на самые
-							полезные
-							статьи и материалы,
-							необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора хостинга
-							перед
-							созданием сайта до
-							выбора стратегии продвижения после запуска.
-						</p>
-						<div class="card__hashtag">
-							<a href="#" class="card__hashtag_link">#некстайп</a>
-							<a href="#" class="card__hashtag_link">#веб_студия</a>
-							<a href="#" class="card__hashtag_link">#новыйсайт</a>
-							<a href="#" class="card__hashtag_link">#запусксайта</a>
+					<div class="card">
+						<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
+						<div class="card__promo">
+							<p class="card__text">
+								В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на
+								самые
+								полезные
+								статьи и материалы,
+								необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора
+								хостинга
+								перед
+								созданием сайта до
+								выбора стратегии продвижения после запуска.
+							</p>
+							<div class="card__hashtag">
+								<a href="#" class="card__hashtag_link">#некстайп</a>
+								<a href="#" class="card__hashtag_link">#веб_студия</a>
+								<a href="#" class="card__hashtag_link">#новыйсайт</a>
+								<a href="#" class="card__hashtag_link">#запусксайта</a>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="card">
-					<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
-					<div class="card__promo">
-						<p class="card__text">
-							В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на самые
-							полезные
-							статьи и материалы,
-							необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора хостинга
-							перед
-							созданием сайта до
-							выбора стратегии продвижения после запуска.
-						</p>
-						<div class="card__hashtag">
-							<a href="#" class="card__hashtag_link">#некстайп</a>
-							<a href="#" class="card__hashtag_link">#веб_студия</a>
-							<a href="#" class="card__hashtag_link">#новыйсайт</a>
-							<a href="#" class="card__hashtag_link">#запусксайта</a>
+					<div class="card">
+						<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
+						<div class="card__promo">
+							<p class="card__text">
+								В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на
+								самые
+								полезные
+								статьи и материалы,
+								необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора
+								хостинга
+								перед
+								созданием сайта до
+								выбора стратегии продвижения после запуска.
+							</p>
+							<div class="card__hashtag">
+								<a href="#" class="card__hashtag_link">#некстайп</a>
+								<a href="#" class="card__hashtag_link">#веб_студия</a>
+								<a href="#" class="card__hashtag_link">#новыйсайт</a>
+								<a href="#" class="card__hashtag_link">#запусксайта</a>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="card">
-					<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
-					<div class="card__promo">
-						<p class="card__text">
-							В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на самые
-							полезные
-							статьи и материалы,
-							необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора хостинга
-							перед
-							созданием сайта до
-							выбора стратегии продвижения после запуска.
-						</p>
-						<div class="card__hashtag">
-							<a href="#" class="card__hashtag_link">#некстайп</a>
-							<a href="#" class="card__hashtag_link">#веб_студия</a>
-							<a href="#" class="card__hashtag_link">#новыйсайт</a>
-							<a href="#" class="card__hashtag_link">#запусксайта</a>
+					<div class="card">
+						<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
+						<div class="card__promo">
+							<p class="card__text">
+								В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на
+								самые
+								полезные
+								статьи и материалы,
+								необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора
+								хостинга
+								перед
+								созданием сайта до
+								выбора стратегии продвижения после запуска.
+							</p>
+							<div class="card__hashtag">
+								<a href="#" class="card__hashtag_link">#некстайп</a>
+								<a href="#" class="card__hashtag_link">#веб_студия</a>
+								<a href="#" class="card__hashtag_link">#новыйсайт</a>
+								<a href="#" class="card__hashtag_link">#запусксайта</a>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="card">
-					<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
-					<div class="card__promo">
-						<p class="card__text">
-							В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на самые
-							полезные
-							статьи и материалы,
-							необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора хостинга
-							перед
-							созданием сайта до
-							выбора стратегии продвижения после запуска.
-						</p>
-						<div class="card__hashtag">
-							<a href="#" class="card__hashtag_link">#некстайп</a>
-							<a href="#" class="card__hashtag_link">#веб_студия</a>
-							<a href="#" class="card__hashtag_link">#новыйсайт</a>
-							<a href="#" class="card__hashtag_link">#запусксайта</a>
+					<div class="card">
+						<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
+						<div class="card__promo">
+							<p class="card__text">
+								В нашем блоге на сайте nextype.ru вышла новая статья, в которой мы собрали ссылки на
+								самые
+								полезные
+								статьи и материалы,
+								необходимые при запуске нового сайта. Рассказываем обо всем по порядку: от выбора
+								хостинга
+								перед
+								созданием сайта до
+								выбора стратегии продвижения после запуска.
+							</p>
+							<div class="card__hashtag">
+								<a href="#" class="card__hashtag_link">#некстайп</a>
+								<a href="#" class="card__hashtag_link">#веб_студия</a>
+								<a href="#" class="card__hashtag_link">#новыйсайт</a>
+								<a href="#" class="card__hashtag_link">#запусксайта</a>
+							</div>
 						</div>
 					</div>
 				</div>
