--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 	<div class="container">
-		<div class="social">
+		<section class="social">
 			<h1 class="social__header">
 				Блог и соцсети
 			</h1>
@@ -178,7 +178,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 	</div>
 	<script src="js/script.js"></script>
 </body>
