--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -178,8 +180,12 @@
 						</div>
 					</div>
 				</div>
-				<div class="swiper-button-next"></div>
-				<div class="swiper-button-prev"></div>
+				<span class="material-symbols-outlined swiper-button-next">
+					arrow_forward
+				</span>
+				<span class="material-symbols-outlined swiper-button-prev">
+					arrow_back
+				</span>
 				<div class="swiper-pagination"></div>
 			</div>
 		</section>
