Подправил классы для табов

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 				проверки направлений прогрессивного развития.
 			</p>
 			<ul class="social__tabs">
-				<li class="blog__tab">
+				<li class="blog__tab social__tab">
 					<div>Блог</div>
 				</li>
-				<li class="vk__tab">
+				<li class="vk__tab social__tab">
 					<div>ВКонтакте</div>
 				</li>
-				<li class="instagram__tab social__tab_active">
+				<li class="instagram__tab social__tab social__tab_active">
 					<div>Instagram</div>
 				</li>
-				<li class="youtube__tab">
+				<li class="youtube__tab social__tab">
 					<div>YouTube</div>
 				</li>
-				<li class="facebook__tab">
+				<li class="facebook__tab social__tab">
 					<div>Facebook</div>
 				</li>
 			</ul>
@@ -186,8 +186,13 @@
 				<span class="material-symbols-outlined swiper-button-prev">
 					arrow_back
 				</span>
+				<!-- <div class="swiper-button-next"></div>
+				<div class="swiper-button-prev"></div> -->
 				<div class="swiper-pagination"></div>
 			</div>
+			<!-- <span class="material-symbols-outlined swiper-button-next">
+				arrow_forward
+			</span> -->
 		</section>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
