--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 								<a href="#" class="card__hashtag_link">#запусксайта</a>
 							</div>
 						</div>
+						<div class="gradient_block"></div>
 					</div>
 					<div class="swiper-slide card">
 						<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
@@ -90,6 +91,7 @@
 								<a href="#" class="card__hashtag_link">#запусксайта</a>
 							</div>
 						</div>
+						<div class="gradient_block"></div>
 					</div>
 					<div class="swiper-slide card">
 						<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
@@ -112,6 +114,7 @@
 								<a href="#" class="card__hashtag_link">#запусксайта</a>
 							</div>
 						</div>
+						<div class="gradient_block"></div>
 					</div>
 					<div class="swiper-slide card">
 						<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
@@ -134,6 +137,7 @@
 								<a href="#" class="card__hashtag_link">#запусксайта</a>
 							</div>
 						</div>
+						<div class="gradient_block"></div>
 					</div>
 					<div class="swiper-slide card">
 						<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
@@ -156,6 +160,7 @@
 								<a href="#" class="card__hashtag_link">#запусксайта</a>
 							</div>
 						</div>
+						<div class="gradient_block"></div>
 					</div>
 					<div class="swiper-slide card">
 						<img src="images/promo_card.png" alt="Промо карточка" class="card__img">
@@ -178,6 +183,7 @@
 								<a href="#" class="card__hashtag_link">#запусксайта</a>
 							</div>
 						</div>
+						<div class="gradient_block"></div>
 					</div>
 				</div>
 				<span class="material-symbols-outlined swiper-button-next">
