Сделал переключение табов на странице

--- a/index.html
+++ b/index.html
@@ -29,19 +29,20 @@
 			</p>
 			<ul class="social__tabs">
 				<li class="social__tab">
-					<button class="tablink">Блог</button>
+					<button class="tablink" onclick="openPage('blog__tab', this, '#2244CC')">Блог</button>
 				</li>
 				<li class="social__tab">
-					<button class="tablink">ВКонтакте</button>
-				</li>
-				<li class="social__tab social__tab_active">
-					<button class="tablink" id="defaultOpen">Instagram</button>
+					<button class="tablink" onclick="openPage('vk__tab', this, '#2244CC')">ВКонтакте</button>
 				</li>
 				<li class="social__tab">
-					<button class="tablink">YouTube</button>
+					<button class="tablink" onclick="openPage('instagram__tab', this, '#2244CC')"
+						id="defaultOpen">Instagram</button>
 				</li>
 				<li class="social__tab">
-					<button class="tablink">Facebook</button>
+					<button class="tablink" onclick="openPage('youtube__tab', this, '#2244CC')">YouTube</button>
+				</li>
+				<li class="social__tab">
+					<button class="tablink" onclick="openPage('facebook__tab', this, '#2244CC')">Facebook</button>
 				</li>
 			</ul>
 			<hr class="divider">
